--- a/src/ui/03_molecules/Responsive/_message-repsonsive.scss
+++ b/src/ui/03_molecules/Responsive/_message-repsonsive.scss
@@ -14,6 +14,9 @@
     .pointer{
         font-size: 80px;
     }
+    .wave-top{
+        margin: -20px 0 -100px 0;
+    }
 }
 //DESKTOP
 @media (min-width: 1024px){
