--- a/src/ui/03_molecules/Responsive/_message-repsonsive.scss
+++ b/src/ui/03_molecules/Responsive/_message-repsonsive.scss
@@ -17,6 +17,9 @@
     .wave-top{
         margin: -20px 0 -100px 0;
     }
+    .wave-bottom{
+        margin: -100px 0 -10px 0;
+    }
 }
 //DESKTOP
 @media (min-width: 1024px){
