--- a/src/ui/02_atoms/SVG/_svg.scss
+++ b/src/ui/02_atoms/SVG/_svg.scss
@@ -1,7 +1,9 @@
 .wave-top{
     margin: 0;
+    border-top: 5px solid #0b6ba3;
 }
 
 .wave-bottom{
     margin: -50px 0 -10px 0;
+    border-bottom: 5px solid #0f9aeb;
 }
