--- a/src/ui/03_molecules/Responsive/_offer-responsive.scss
+++ b/src/ui/03_molecules/Responsive/_offer-responsive.scss
@@ -10,13 +10,14 @@
 @media (min-width: 750px){
     .o-content{
         padding: 50px;
-        p{
+        p, a{
             font-size: 20px;
         }
         .o-content-container-title{
             font-size: 25px;
         }
         .o-content-container-box{
+            margin: 20px 100px;
             h1,h2{
                 font-size: 30px;
             }
@@ -53,7 +54,6 @@
 }
 @media (min-width: 1440px){    
     .o-content{
-        padding: 50px 250px;
         .o-content-container-title{
             font-size: 40px;
         }
