--- a/src/ui/03_molecules/Responsive/_offer-responsive.scss
+++ b/src/ui/03_molecules/Responsive/_offer-responsive.scss
@@ -54,6 +54,7 @@
 }
 @media (min-width: 1440px){    
     .o-content{
+        padding: 50px 150px;
         .o-content-container-title{
             font-size: 40px;
         }
