--- a/src/ui/02_atoms/_atoms.scss
+++ b/src/ui/02_atoms/_atoms.scss
@@ -1,6 +1,7 @@
 @import 'Buttons/scroll-btn';
 @import 'Buttons/hamburger-menu-btn';
 @import 'Buttons/header-btns';
+@import 'Buttons/box-cta-buttons';
 @import 'Pointer/pointer';
 @import 'Error/errors';
 @import 'Images/images';
