--- a/src/ui/03_molecules/_molecules.scss
+++ b/src/ui/03_molecules/_molecules.scss
@@ -4,5 +4,6 @@
 @import 'Components/form-thanks';
 @import 'Components/introduction';
 @import 'Components/team';
+@import 'Components/project-box';
 @import 'Hamburger-menu/menu';
 @import 'Loader/loader';
