--- a/src/ui/03_molecules/_responsive.scss
+++ b/src/ui/03_molecules/_responsive.scss
@@ -6,3 +6,4 @@
 @import 'Responsive/hamburger-menu-responsive';
 @import 'Responsive/message-repsonsive';
 @import 'Responsive/team-responsive';
+@import 'Responsive/project-box-responsive';
