--- a/src/ui/01_fundaments/Animations/_animations.scss
+++ b/src/ui/01_fundaments/Animations/_animations.scss
@@ -7,3 +7,13 @@ $floating-anim: floating;
     75%{transform: translate(0px,-15px);}
     100%{transform: translate(0,0);}
 }
+
+.project:nth-child(1){
+    .project__landing__title{
+        a{
+            i{
+                animation: 2s ease-in-out infinite $floating-anim;
+            }
+        }
+    }
+}
