--- a/src/ui/01_fundaments/Colors/_colors.scss
+++ b/src/ui/01_fundaments/Colors/_colors.scss
@@ -19,6 +19,9 @@ $intro-list-border-color: #ffffff;
 $contact-textarea-scrollbar-color: rgb(131, 204, 247);
 $contact-textarea-scrollbar-background-color: #fff;
 
+//QUOTE
+$quote-shadow: darken(rgb(131, 204, 247), 35);
+
 //COLOR CLASS GENERATOR
 $colors: (
   'neutrals-0': #fff,
