--- a/src/ui/02_atoms/_atoms.scss
+++ b/src/ui/02_atoms/_atoms.scss
@@ -8,5 +8,6 @@
 @import 'Scrollbar/scroll-bar';
 @import 'Scrollbar/textarea-scroll-bar';
 @import 'Text/offer-box-text';
+@import 'Text/quote';
 @import 'SVG/svg';
 @import 'Icons/icons';
