--- a/src/ui/02_atoms/Images/_images.scss
+++ b/src/ui/02_atoms/Images/_images.scss
@@ -41,7 +41,7 @@
 
 //PROJECTS
 //CARD 1 -- BRAINS
-.project:nth-child(2), .project:nth-child(3){
+.project:nth-child(2), .project:nth-child(3), .project:nth-child(4), .project:nth-child(5){
     .project__content{
         position: relative;
         &__image{
