--- a/src/ui/03_molecules/Components/_project-box.scss
+++ b/src/ui/03_molecules/Components/_project-box.scss
@@ -1,4 +1,4 @@
-.project:nth-child(2), .project:nth-child(3){
+.project:nth-child(2), .project:nth-child(3), .project:nth-child(4), .project:nth-child(5){
     display: flex;
     justify-content: center;
     align-items: center;
