--- a/src/ui/03_molecules/Components/_project-box.scss
+++ b/src/ui/03_molecules/Components/_project-box.scss
@@ -4,6 +4,7 @@
     align-items: center;
     height: 100%;
     text-align: left;   
+    overflow-x: hidden;
     .project__content{
         height: 100%;
         width: 90vw;
