--- a/src/ui/03_molecules/Responsive/_project-box-responsive.scss
+++ b/src/ui/03_molecules/Responsive/_project-box-responsive.scss
@@ -8,6 +8,9 @@
             }
             &__image{
                 display: inherit;
+                img{
+                    height: 100%;
+                }
             }
             ol{
                 width: 50%;
@@ -18,6 +21,9 @@
         .project__content{
             &__image{
                 top: 9%;
+                img{
+                    height: 100%;
+                }
             }
             .quote{
                 &__slider{
@@ -39,7 +45,7 @@
                 height: 350px;
                 width: 550px;
                 img{
-                    height: 40vh;                    
+                    height: 110%;                    
                 }
             }
             ol{
@@ -55,7 +61,7 @@
                 height: 350px;
                 width: 550px;
                 img{
-                    height: 40vh;                    
+                    height: 110%;                    
                 }
             }
             ol{
