--- a/src/ui/02_atoms/Buttons/_header-btns.scss
+++ b/src/ui/02_atoms/Buttons/_header-btns.scss
@@ -1,31 +1,31 @@
 //HEADER BUTTONS
 .btn {
     position: absolute;
-    display: block;
+    display: flex;
     margin-top: 20px;
-    button{
+    button {
         cursor: pointer;
         outline: none;
         border: none;
         padding: 15px;
         border-radius: 5px;
         margin: 10px 20px 0 0;
-        transition: all .2s ease-in-out;
+        transition: all 0.2s ease-in-out;
     }
 }
 .about-btn {
-    button{
+    button {
         background-color: $header-white-btn-hover-color;
     }
-    button:hover{
+    button:hover {
         background-color: $header-light-btn-hover-color;
     }
 }
 .contact-btn {
-    button{
+    button {
         background-color: $header-blue-btn-color;
     }
-    button:hover{
+    button:hover {
         background-color: $header-blue-btn-hover-color;
     }
 }
