--- a/src/ui/04_organism/Footer/_footer.scss
+++ b/src/ui/04_organism/Footer/_footer.scss
@@ -1,13 +1,15 @@
-.f-content{
-    a{
+.f-content {
+    a {
         text-decoration: none;
     }
-    .f-content-nav{
-        a{
+    .f-content-nav {
+        display: flex;
+        justify-content: center;
+        a {
             border-right: 2px solid #fff;
             padding: 0 10px;
         }
-        a:last-child{
+        a:last-child {
             border-right: none;
         }
     }
